# Assignment-Federated-Learning-UScensus

./: .gitignore  Federated Learning for Big Data.docx  README.md  cleansing_job.sh  data_splits_prep.sh  final_model.pt  jobs_gen.sh  main.py  preparing_data.ipynb  pyproject.toml  run_fl_experiment.sh  testCUDA_imports.py
utils/: acc_loss_visualization.py  data_preparation.py  data_preprocessing.py  jobs_gen.py  prepare_data_splits.py
workspace/: .gitignore  client_app.py  model.py  pyproject.toml  server_app.py  task.py
