[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adult-federated"
version = "1.0.0"
description = "Federated Learning on UCI Adult Income with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "torch==2.8.0",
    "pandas>=3.0.0",
    "numpy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 1.0
local-epochs = 3
learning-rate = 0.001
batch-size = 64
workspace-path = "./workspace"
